modernize MANIFEST.in, see https://www.reddit.com/r/Python/comments/40s8qw/simplify_your_manifestin_commands/

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include *
-recursive-include docs *
-recursive-include plone *
+graft docs
+graft plone
 
-global-exclude *.pyc
+global-exclude *.py[co]
