--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,6 @@ recursive-include docs *
 recursive-include plone *
 
 global-exclude *.pyc
+include pyproject.toml
+recursive-exclude news *
+exclude news
