--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,40 @@
 language: python
+dist: xenial
+
 matrix:
-  include:
-    - python: "2.7"
-      env: PLONE=5.0
-install: make plone$PLONE
-script: ./bin/test
+    include:
+        - name: "docs,lint"
+          python: "3.6"
+          env: TOXENV=docs,lint
+          before_install:
+          after_success:
+        - python: "2.7"
+          env: TOXENV=py27
+        - python: "3.5"
+          env: TOXENV=py35
+        - python: "3.6"
+          env: TOXENV=py36
+        - python: "3.7"
+          env: TOXENV=py37
+        - python: "3.8"
+          env: TOXENV=py38
+
+before_install:
+    -  travis_retry pip install -U coveralls coverage
+
+install:
+    - travis_retry pip install -U pip setuptools
+    - travis_retry pip install -U tox
+
+script:
+    - travis_retry tox
+
+after_success:
+    - coverage combine
+    - coveralls
+
+notifications:
+    email: false
+
 cache:
-  directories:
-  - $TRAVIS_BUILD_DIR/eggs
+  pip: true
