--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,50 @@
+[check-manifest]
+ignore =
+    .travis.yml
+
 [zest.releaser]
 create-wheel = yes
 
-# When Python 2-3 compatible:
 [bdist_wheel]
 universal = 1
+
+[aliases]
+test = pytest
+
+[tool:pytest]
+addopts =
+testpaths =
+    .
+
+norecursedirs = fixures
+
+[isort]
+force_alphabetical_sort = True
+force_single_line = True
+
+line_length = 200
+lines_after_imports = 2
+
+not_skip =
+    __init__.py
+
+[flake8]
+ignore =
+    # W503 line break before binary operator: is no longer requested by PEP-8
+    W503
+no-accept-encodings = True
+
+[coverage:run]
+branch = True
+source = .
+
+[coverage:report]
+precision = 2
+#fail_under = 100
+skip_covered = True
+show_missing = True
+sort = Name
+
+[coverage:html]
+directory = _build/coverage
+
