--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ test = pytest
 addopts =
 testpaths =
     .
+    tests
 
 norecursedirs = fixures
 
@@ -32,6 +33,8 @@ not_skip =
 ignore =
     # W503 line break before binary operator: is no longer requested by PEP-8
     W503
+    T000 # TODO should be accepeted for the moment.
+    C103 # Magic Comment should be accepted till python 2.7 comatibility is removed
 no-accept-encodings = True
 
 [coverage:run]
