Tox: use mxdev so we can ignore the version pin for plone.namedfile.
The previous version of this tox file did not work as intended:
I got CMFPlone 5.2.6 for all environments, instead of 5.2.7rc1 and 6.0.0a2.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
+.idea
+.installed.cfg
+.project
+.pydevproject
 *.egg-info
 *.pyc
-.project
-.idea
-.pydevproject
-.installed.cfg
 bin
-lib
-include
-parts
+constraints-*-mxdev.txt
 develop-eggs
+include
+lib
+parts
+requirements-*-mxdev.txt
