--- a/tox.ini
+++ b/tox.ini
@@ -11,15 +11,21 @@ envlist =
 skip_missing_interpreters = False
 
 [testenv]
-usedevelop = True
-extras =
-    test
+usedevelop = False
+skip_install = true
 commands =
     python -V
     pip list
     zope-testrunner --test-path={toxinidir} {posargs:-vc}
-install_command = pip install --use-deprecated legacy-resolver {opts} {packages}
-deps =
-    zope.testrunner
-    plone52: -c https://dist.plone.org/release/5.2-dev/constraints.txt
-    plone60: -c https://dist.plone.org/release/6.0-dev/constraints.txt
+
+[testenv:plone52-py{36,37,38}]
+commands_pre =
+    pip install mxdev
+    mxdev -c sources-52.ini
+    pip install --use-deprecated legacy-resolver -rrequirements-52-mxdev.txt
+
+[testenv:plone60-py{37,38,39,310}]
+commands_pre =
+    pip install mxdev
+    mxdev -c sources-60.ini
+    pip install --use-deprecated legacy-resolver -rrequirements-60-mxdev.txt
