--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,9 @@ create-wheel = yes
 # When Python 2-3 compatible:
 [bdist_wheel]
 universal = 1
+
+[check-manifest]
+ignore =
+  requirements-*.txt
+  sources-*.ini
+  tox.ini
