mxdev: use the pre-scale branch of plone.scale.

--- a/sources-52.ini
+++ b/sources-52.ini
@@ -7,4 +7,10 @@
 requirements-in = requirements-52.txt
 requirements-out = requirements-52-mxdev.txt
 constraints-out = constraints-52-mxdev.txt
-ignores = plone.namedfile
+ignores =
+    plone.namedfile
+    plone.scale
+
+[plone.scale]
+url = https://github.com/plone/plone.scale.git
+branch = pre-scale
