--- a/sources-60.ini
+++ b/sources-60.ini
@@ -7,4 +7,10 @@
 requirements-in = requirements-60.txt
 requirements-out = requirements-60-mxdev.txt
 constraints-out = constraints-60-mxdev.txt
-ignores = plone.namedfile
+ignores =
+    plone.namedfile
+    plone.scale
+
+[plone.scale]
+url = https://github.com/plone/plone.scale.git
+branch = pre-scale
