--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,10 @@ ignore =
   requirements-*.txt
   sources-*.ini
   tox.ini
+
+[isort]
+# black compatible Plone isort rules:
+profile = black
+force_alphabetical_sort = True
+force_single_line = True
+lines_after_imports = 2
