Let NavigationRootScaling use the new image_scales metadata.
Fall back to getObject.

--- a/sources-60.ini
+++ b/sources-60.ini
@@ -10,7 +10,12 @@ constraints-out = constraints-60-mxdev.txt
 ignores =
     plone.namedfile
     plone.scale
+    Products.CMFPlone
 
 [plone.scale]
 url = https://github.com/plone/plone.scale.git
 branch = pre-scale
+
+[Products.CMFPlone]
+url = https://github.com/plone/Products.CMFPlone.git
+branch = image_scales_metadata
