--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     plone60-py38,
     plone60-py39,
     plone60-py310,
+    plone60-py311,
 
 skip_missing_interpreters = False
 
@@ -22,10 +23,9 @@ commands_pre =
     mxdev -c sources-52.ini
     pip install --use-deprecated legacy-resolver -rrequirements-52-mxdev.txt
 
-[testenv:plone60-py{38,39,310}]
+[testenv:plone60-py{38,39,310,311}]
 commands_pre =
     pip install -U pip
-    # for libvcs pin, see https://github.com/bluedynamics/mxdev/issues/10
-    pip install mxdev "libvcs<0.12"
+    pip install mxdev
     mxdev -c sources-60.ini
     pip install -rrequirements-60-mxdev.txt
