Prevent exception when an anonymous user is the first to load a page with a private image.
Anonymous still gets an Unauthorized when loading the image, but that is to be expected.
The html at least shows normally.
Fixes https://github.com/plone/plone.namedfile/issues/135.
We require plone.app.uuid 2.2.0 or higher for this.

--- a/sources-52.ini
+++ b/sources-52.ini
@@ -10,7 +10,10 @@ constraints-out = constraints-52-mxdev.txt
 ignores =
     plone.namedfile
     plone.scale
+version-overrides =
+    # We need the unrestricted=True option:
+    plone.app.uuid==2.2.1
 
-[plone.scale]
-url = https://github.com/plone/plone.scale.git
-branch = pre-scale
+# [plone.scale]
+# url = https://github.com/plone/plone.scale.git
+# branch = master
