--- a/tox.ini
+++ b/tox.ini
@@ -19,13 +19,13 @@ commands =
 
 [testenv:plone52-py{37,38}]
 commands_pre =
-    pip install mxdev
+    pip install -U --pre mxdev
     mxdev -c sources-52.ini
     pip install --use-deprecated legacy-resolver -rrequirements-52-mxdev.txt
 
 [testenv:plone60-py{38,39,310,311}]
 commands_pre =
     pip install -U pip
-    pip install mxdev
+    pip install -U --pre mxdev
     mxdev -c sources-60.ini
     pip install -rrequirements-60-mxdev.txt
