Tox: explicitly test only the plone.namedfile package.
Otherwise tests in source checkouts may be found as well.

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ skip_install = true
 commands =
     python -V
     pip list
-    zope-testrunner --test-path={toxinidir} {posargs:-vc}
+    zope-testrunner --test-path={toxinidir} -s plone.namedfile {posargs:-vc}
 
 [testenv:plone52-py{37,38}]
 commands_pre =
