--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,14 @@
 [tox]
 envlist =
-    plone52-py37,
-    plone52-py38,
-    plone60-py38,
     plone60-py39,
     plone60-py310,
     plone60-py311,
+    plone60-py312,
+    plone60-py313,
+    plone61-py310,
+    plone61-py311,
+    plone61-py312,
+    plone61-py313,
 
 skip_missing_interpreters = False
 
@@ -17,15 +20,16 @@ commands =
     pip list
     zope-testrunner --test-path={toxinidir} -s plone.namedfile {posargs:-vc}
 
-[testenv:plone52-py{37,38}]
-commands_pre =
-    pip install -U --pre mxdev
-    mxdev -c sources-52.ini
-    pip install --use-deprecated legacy-resolver -rrequirements-52-mxdev.txt
-
-[testenv:plone60-py{38,39,310,311}]
+[testenv:plone60-py{39,310,311,312,313}]
 commands_pre =
     pip install -U pip
     pip install -U --pre mxdev
     mxdev -c sources-60.ini
     pip install -rrequirements-60-mxdev.txt
+
+[testenv:plone61-py{310,311,312,313}]
+commands_pre =
+    pip install -U pip
+    pip install -U --pre mxdev
+    mxdev -c sources-61.ini
+    pip install -rrequirements-61-mxdev.txt
