--- a/.meta.toml
+++ b/.meta.toml
@@ -4,3 +4,8 @@
 [meta]
 template = "default"
 commit-id = "2.0.1.dev0"
+
+[pyproject]
+dependencies_mappings = [
+    "'Zope' = ['OFS.Image', 'OFS.SimpleItem', 'ZODB']",
+]
