--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,3 @@
 [isort]
 # black compatible Plone isort rules:
-profile = black
-force_alphabetical_sort = True
-force_single_line = True
-lines_after_imports = 2
+profile = plone
