Configuring with plone.meta

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,7 @@ Zope = [
 ]
 python-dateutil = ['dateutil']
 pytest-plone = ['pytest', 'zope.pytestlayer', 'plone.testing', 'plone.app.testing']
+'Pillow' = ['PIL', 'PIL.Image']
 
 ##
 # Add extra configuration options in .meta.toml:
