--- a/.meta.toml
+++ b/.meta.toml
@@ -6,7 +6,7 @@ template = "default"
 commit-id = "2.0.1.dev0"
 
 [pyproject]
-dependencies_ignores = ['zope.app.file']
+dependencies_ignores = ['zope.app.file', 'bs4']
 dependencies_mappings = [
     "'Pillow' = ['PIL', 'PIL.Image']",
 ]
