--- a/tox.ini
+++ b/tox.ini
@@ -90,9 +90,9 @@ commands =
 [test_runner]
 deps = zope.testrunner
 test =
-    zope-testrunner --all --test-path={toxinidir} -s plone.namedfile {posargs}
+    zope-testrunner --all --test-path={toxinidir}/src -s plone.namedfile {posargs}
 coverage =
-    coverage run --branch --source plone.namedfile {envbindir}/zope-testrunner --quiet --all --test-path={toxinidir} -s plone.namedfile {posargs}
+    coverage run --branch --source plone.namedfile {envbindir}/zope-testrunner --quiet --all --test-path={toxinidir}/src -s plone.namedfile {posargs}
     coverage report -m --format markdown
     coverage xml
     coverage html
